# Data-Structures-Lab1

./: .floo  CMakeLists.txt  list.c  list.h  listTest.c  main.c  queue.c  queue.h  stack.c  stack.h  stackTest.c
ex/: ex_2.txt  ex_6.txt  ex_7.txt  ex_8.txt  text_6.txt
src/: main.c
src/list/: list.h
src/queue/: queue.c  queue.h
src/stack/: stack.c  stack.h
src/tests/: labTests.c  listTest.c  queueTest.c  stackTest.c
